--- a/templates/topics.html
+++ b/templates/topics.html
@@ -10,5 +10,5 @@
 {% endblock %}
 
 {% block content %}
-    <!-- just leaving it empty for now. we will add core here soon. -->
+    <!-- just leaving it empty for now. -->
 {% endblock %}
