--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   <table class="table">
-    <thead class="thead-inverse">
+    <thead class="thead-inverse" style = "background-color: black; color:white;">
       <tr>
         <th>Board</th>
         <th>Posts</th>
